# python_course

hw_1/task1/: main.py  pyproject.toml
hw_1/task3/: pyproject.toml
hw_2/: main.py  pyproject.toml
hw_2/task1/: .gitignore  README.md  example-latex.tex  latex_gen.py  main.py  pyproject.toml
hw_2/task1/src/latex_generator/: __init__.py  generator.py
hw_2/task2/artifacts/: link_to_pypi.txt
hw_3/: main.py
hw_3/matrix/: pyproject.toml
hw_3/matrix/src/matrix/: __init__.py
hw_3/task1/matrix/src/matrix/: Matrix.py
hw_3/task2/arithmetic/: pyproject.toml
hw_3/task2/arithmetic/src/arithmetic/: Arithmetic.py
