[project]
name = "matrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Murzabek", email = "murzabek1995@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
